Add Favicon Merging